# multeq-impulse-extractor

./: .gitignore  MANIFEST.in  README.md  extract.py  pyproject.toml  setup.py
multeq_impulse_extractor/: extract.py  header.template
src/multeq_impulse_extractor/: extract.py  multeq-impulse-extractor.py  perfect_speaker.json
